SP-31 fixed overflow issue on data blob

--- a/DCC-UI/ClientApp/src/app/progress/progress.component.css
+++ b/DCC-UI/ClientApp/src/app/progress/progress.component.css
@@ -40,3 +40,7 @@ button {
 button {
   margin-bottom:10px;
 }
+
+.table-data {
+  word-break: break-all;
+}
